# examples

./: .gitignore  README.md  car_detection.py  config.py  config.yaml  datasets.py  models.py  pyproject.toml  run_script  tf_gan.py  tf_variation_autoencoder.py  timm_examples.py  torch_gan.py  torch_vae.py  yolo.py
albumentations/: main.py
car_detection/: car_detection.py
classification/: train.py  train_tf.py
coreml/: main.py  pyproject.toml
diffusers/: main.py  pyproject.toml
face_recognition/: utils.py
flow_matching/: odes.ipynb
gradio/: Dockerfile  app.py  docker-compose.yaml  pixelart.py  pyproject.toml  run
human_pose/movenet/: cropping.py  drawing.py  main.py  mediapipe_main.py
human_pose/sapiens/: Dockerfile  pose_keypoints.sh
image_matching_2025/: kaggle.py  pyproject.toml  train.py  visualize_colmap.py
kuber_docker/: start-server.sh
kuber_docker/backend/: Dockerfile.dev  package-lock.json  package.json  server.js
kuber_docker/backend/routes/: store.js
kuber_docker/db_config/: mongo-init.js
llms/: embedding_gemma.py  fine_tuning.py  langchain_demo.py  model.py  pyproject.toml
nlp_pipeline_tutorial/: data.py  main.py  visualization.py
pipeline_tutorial/: main.py
regression/: co2_data.py  scikit_learn.py
reinforcement_learning/: q_learn_tic_tac_toe.py  q_learn_ultimate_tictactoe.py
segmentation/: main.py
skimage/: main.py  pyproject.toml
tabular_data/: walmart.py
tensor_rt/: compile_stable_diff.py  cuda_graphs.py  custom_converters.py  engine_caching.py  main.py  post_train_quant.py  pyproject.toml  quant_aware_training.py  refit_tensorrt.py  train.py
tensor_rt/triton/: client.py  server.py
