[project]
name = "datasets"
version = "0.1.0"
description = "Image processing dataset"
requires-python = ">=3.10"

dependencies = [
    "torch>=1.9.1",
    "kornia",
    "albumentations>=2.0.8",
    "opencv-python",
    "numpy",
    "tensorflow",
    "keras",
    "datasets",
    "torchvision",
    "transformers",
    "accelerate",
    "timm",
    "pillow",
    "omegaconf",
    "hydra-core",
    "scikit-image>=0.25.2",
    "torchmetrics",
    "matplotlib",
    "seaborn",
    "typer",
    "transformers",
    "pandas",
]
