[project]
name = "examples"
version = "0.1.0"
description = "Image processing dataset"
requires-python = ">=3.10"

dependencies = [
    "torch",
    "kornia",
    "albumentations>=2.0.8",
    "opencv-python",
    "numpy",
    "tensorflow",
    "keras",
    "datasets",
    "torchvision",
    "transformers",
    "accelerate",
    "timm",
    "pillow",
    "omegaconf",
    "hydra-core",
    "scikit-image",
    "torchmetrics",
    "matplotlib",
    "seaborn",
    "typer",
    "transformers",
    "pandas",
]
