[project]
name = "datasets"
version = "0.1.0"
description = "image_matching"
requires-python = "~=3.11"

dependencies = [
    "torch>=1.9.1",
    "h5py",
    "transformers",
    "scikit-learn==1.3.0",
    "gluefactory@git+https://github.com/cvg/glue-factory",
    "scikit-image",
    "pycolmap",
    "kornia",
    "open3d",
    # "albumentations>=2.0.8",
    "opencv-python",
    "numpy==1.23.0",
    "seaborn",
    "typer",
    "pandas",
]
