
[project]
name = "llms"
version = "0.1.0"
requires-python = ">=3.10"


# Runtime dependencies
dependencies = [
    "langchain-community",
    "langchain-core",
    "langchain-chroma",
    "langchain-ollama",
    "langchain",
    "langchain-text-splitters",
    "langgraph-checkpoint-postgres",
    "psycopg-binary",
    "tqdm",
    "dotenv",
    "pypdf",
    "ruff",
    "ollama",
    "bs4",
    "typer",
]
