[project]
name="skimage-tutorials"
version="0.0.1"
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "pandas",
    "requests",
    "ruff",
    "plotly",
    "matplotlib",
    "scikit-image",
    "pooch"
]

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.9
target-version = "py39"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
