[project]
name = "tensorrt"
version = "0.1.0"
description = "Image processing dataset"
requires-python = ">=3.10"

dependencies = [
    "scikit-image",
    "numpy",
    "tabulate",
    "torch",
    "torchvision",
    "tensorrt",
    "setuptools",
    "pandas",
    # pytorch-quantization requires the NVIDIA index.
    "tqdm",
    "wget",
    # you have to take care that you link the right cuda libraries
    #LD_LIBRARY_PATH is a hard link with uv
]
